--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 42cc-pystyle==0.0.15
 Django==1.8.5
 South==1.0.2
+argparse==1.2.1
+djangorestframework==3.2.4
 flake8==2.5.1
 mccabe==0.3.1
 pep8==1.7.0
 pyflakes==1.0.0
+wsgiref==0.1.2
